# cxx-corrosion-ffi

./: .gitignore  CMakePresets.json  LICENSE  readme.md
src/: CMakeLists.txt  main.cpp
src/rusty_code/: Cargo.toml
src/rusty_code/src/: blocking_http_sender.rs  fizz_buzz.rs  lib.rs  modbus.rs
windows/windows/: CMakeCache.txt
