[package]
name = "rusty_code"
version = "0.1.0"
authors = ["yasinguenduez1@gmail.com"]
edition = "2021"

[dependencies]
cxx = "1"
reqwest = {version = "0.11.16", features = ["blocking"]}

[build-dependencies]
cxx-build = "1"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
